objects/Interactive_Validation_Step_Execution__c.object
<CustomObject>
    <fields>
        <fullName>ApiKey__c</fullName>
        <label>ApiKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExecutionStatus__c</fullName>
        <label>Execution Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interactive_Validation_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interactive Validation Step</label>
        <referenceTo>Interactive_Validation_Step__c</referenceTo>
        <relationshipLabel>Interactive Validation Step Executions</relationshipLabel>
        <relationshipName>Interactive_Validation_Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipLabel>Interactive Validation Step Executions</relationshipLabel>
        <relationshipName>Interactive_Validation_Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgCredentialId__c</fullName>
        <label>OrgCredentialId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Job_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform Job Execution</label>
        <referenceTo>copado1p__Platform_Job_Execution__c</referenceTo>
        <relationshipLabel>Interactive Validation Step Executions</relationshipLabel>
        <relationshipName>Interactive_Validation_Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playground__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playground</label>
        <referenceTo>Playground__c</referenceTo>
        <relationshipLabel>Interactive Validation Step Executions</relationshipLabel>
        <relationshipName>Interactive_Validation_Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Instance_URL__c</fullName>
        <label>Target Instance URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Org_Credential_Id__c</fullName>
        <label>Trial Org Credential Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Validation Execution</label>
        <referenceTo>Validation_Execution__c</referenceTo>
        <relationshipLabel>Interactive Validation Step Executions</relationshipLabel>
        <relationshipName>Interactive_Validation_Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Payload__c</fullName>
        <label>Validation Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Result__c</fullName>
        <label>Validation Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Partial Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interactive Validation Step Execution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interactive Validation Step Execution Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interactive Validation Step Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>